[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_ff_tools"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rokas Elijošius", email = "re344@cam.ac.uk" }]
dependencies = [
    "ase>=3.22.1",
    "typer[all]>=0.7.0",
    "torch>=1.13.0",
    "mace @ git+https://github.com/ACEsuit/mace.git@develop",
    "numpy>=1.23.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_ff_tools", "ml_ff_tools.adapters"]
namespaces = false

[project.scripts]
ml_ff_tools = "ml_ff_tools.main:cli"
